Implemented updating scans and runs page

--- a/frontend/src/components/findings-page/findings-page.html
+++ b/frontend/src/components/findings-page/findings-page.html
@@ -1,3 +1,8 @@
 <findings-page>
-    Findings content
+  <md-toolbar class="md-whiteframe-z2">
+    <h1>Findings</h1>
+
+    <div class="md-toolbar-tools"></div>
+  </md-toolbar>
+
 </findings-page>
