--- a/frontend/src/components/workspaces-page/workspaces-page.html
+++ b/frontend/src/components/workspaces-page/workspaces-page.html
@@ -1,37 +1,42 @@
 <workspaces-page>
-    <md-whiteframe class="md-table table-responsive-vertical md-whiteframe-z1" layout>
-        <!-- Table starts here -->
-        <div ng-if="workspacesPage.workspaceStore.isLoading" layout="row" layout-sm="column" layout-align="space-around">
-            <md-progress-circular md-mode="indeterminate"></md-progress-circular>
-        </div>
+  <md-toolbar class="md-whiteframe-z2">
+    <h1>Workspaces</h1>
+    <div class="md-toolbar-tools"></div>
+  </md-toolbar>
 
-        <table class="table table-hover table-bordered table-condensed" ng-if="!workspacesPage.workspaceStore.isLoading">
-            <thead>
-                <tr>
-                    <th>Name</th>
-                    <th># of Scans</th>
-                    <th>Last Scan</th>
-                </tr>
-            </thead>
+  <md-whiteframe class="md-table table-responsive-vertical md-whiteframe-z1" layout layout-padding>
+    <!-- Table starts here -->
+    <div ng-if="workspacesPage.workspaceStore.isLoading" layout="row" layout-sm="column" layout-align="space-around">
+      <md-progress-circular md-mode="indeterminate"></md-progress-circular>
+    </div>
 
-            <tbody>
-                <tr ng-repeat="workspace in workspacesPage.workspaceStore.items track by workspace.id">
-                    <td data-title="Name">{{workspace.name}}</td>
-                    <td data-title="# of Scans">{{workspace.scanCount}}</td>
-                    <td data-title="Last Scan">{{workspace.lastScan | date:'dd-MM-yyyy HH:mm'}}</td>
-                </tr>
+    <table class="table table-hover table-bordered table-condensed" ng-if="!workspacesPage.workspaceStore.isLoading">
+      <thead>
+        <tr>
+          <th>Name</th>
+          <th># of Scans</th>
+          <th>Last Scan</th>
+        </tr>
+      </thead>
 
-                <tr ng-if="workspacesPage.workspaceStore.isEmpty">
-                    <td colspan="3">No workspaces have been created yet...</td>
-                </tr>
-            </tbody>
-        </table>
-    </md-whiteframe>
+      <tbody>
+        <tr ng-repeat="workspace in workspacesPage.workspaceStore.items track by workspace.id">
+          <td data-title="Name">{{workspace.name}}</td>
+          <td data-title="# of Scans">{{workspace.scanCount}}</td>
+          <td data-title="Last Scan">{{workspace.lastScan | date:'dd-MM-yyyy HH:mm'}}</td>
+        </tr>
 
-    <md-button ui-sref="seccubus.workspacesPage.create" class="md-fab md-primary md-fab-bottom-right" aria-label="Create Workspace">
-        <md-tooltip md-direction="left">
-            Create Workspace
-        </md-tooltip>
-        <md-icon md-svg-icon="content:add"></md-icon>
-    </md-button>
+        <tr ng-if="workspacesPage.workspaceStore.isEmpty">
+          <td colspan="3">No workspaces have been created yet...</td>
+        </tr>
+      </tbody>
+    </table>
+  </md-whiteframe>
+
+  <md-button ui-sref="seccubus.workspacesPage.create" class="md-fab md-primary md-fab-bottom-right" aria-label="Create Workspace">
+    <md-tooltip md-direction="left">
+        Create Workspace
+    </md-tooltip>
+    <md-icon md-svg-icon="content:add"></md-icon>
+  </md-button>
 </workspaces-page>
