Improved the UI by having sticky subheaders on each page, better loading indicators.

--- a/frontend/src/components/findings-page/findings-page.html
+++ b/frontend/src/components/findings-page/findings-page.html
@@ -1,8 +1,7 @@
-<findings-page>
-  <md-toolbar class="md-whiteframe-z2">
-    <h1>Findings</h1>
-
-    <div class="md-toolbar-tools"></div>
-  </md-toolbar>
-
+<findings-page layout="column" layout-fill>
+  <md-content>
+    <section>
+      <md-subheader class="md-primary">Findings</md-subheader>
+    </section>
+  </md-content>
 </findings-page>
