--- a/frontend/src/components/status-page/status-page.less
+++ b/frontend/src/components/status-page/status-page.less
@@ -1,15 +1,11 @@
 status-page {
-	md-card {
-		margin-bottom: 16px;
+  md-icon {
+    &.success {
+      color: #388E3C !important;
+    }
 
-		md-icon {
-			&.success {
-				color: #388E3C;
-			}
-
-			&.error {
-				color: #C62828;
-			}
-		}
-	}
+    &.error {
+      color: #C62828 !important;
+    }
+  }
 }
