--- a/frontend/src/components/scans-page/scans-page.html
+++ b/frontend/src/components/scans-page/scans-page.html
@@ -1,54 +1,56 @@
-<scans-page>
-  <md-toolbar class="md-whiteframe-z2">
-    <h1>Scans</h1>
-    <div class="md-toolbar-tools"></div>
-  </md-toolbar>
+<scans-page layout="column" layout-fill>
+  <md-content>
+    <section>
+      <md-subheader class="md-primary">Scans</md-subheader>
 
-  <md-whiteframe class="md-table table-responsive-vertical md-whiteframe-z1" layout>
-      <!-- Table starts here -->
-      <div ng-if="scansPage.scanStore.isLoading" layout="row" layout-sm="column" layout-align="space-around">
+      <div ng-if="scansPage.scanStore.isLoading" layout="row" layout-align="center center">
           <md-progress-circular md-mode="indeterminate"></md-progress-circular>
       </div>
 
-      <table class="table table-hover table-bordered table-condensed" ng-if="!scansPage.scanStore.isLoading">
-          <col>
-          <col width="130">
-          <col>
-          <col>
-          <col width="160">
-          <col>
+      <md-whiteframe ng-if="!scansPage.scanStore.isLoading"
+                     class="md-table table-responsive-vertical md-whiteframe-z3"
+                     layout layout-padding>
+          <table class="table table-hover table-bordered table-condensed">
+              <col>
+              <col width="130">
+              <col>
+              <col>
+              <col width="160">
+              <col>
 
-          <thead>
-              <tr>
-                  <th>Name</th>
-                  <th>Scanner</th>
-                  <th>Parameters</th>
-                  <th>Hosts</th>
-                  <th>Last Scan</th>
-                  <th>Notifications</th>
-              </tr>
-          </thead>
+              <thead>
+                  <tr>
+                      <th>Name</th>
+                      <th>Scanner</th>
+                      <th>Parameters</th>
+                      <th>Hosts</th>
+                      <th>Last Scan</th>
+                      <th>Notifications</th>
+                  </tr>
+              </thead>
 
-          <tbody>
-              <tr ng-repeat="scan in scansPage.scanStore.items track by scan.id"
-                  ui-sref="seccubus.scansPage.edit({scan_id: scan.id})">
-                  <td data-title="Name">{{scan.name}}</td>
-                  <td data-title="Scanner">{{scan.scanner}}</td>
-                  <td data-title="Parameters">{{scan.parameters}}</td>
-                  <td data-title="Hosts">{{scan.targets}}</td>
-                  <td data-title="Last Scan">
-                    <span ng-if="scan.lastScan">{{scan.lastScan | date:'dd-MM-yyyy HH:mm'}}</span>
-                    <span ng-if="!scan.lastScan">-</span>
-                  </td>
-                  <td data-title="Notifications">{{scan.notifications}}</td>
-              </tr>
+              <tbody>
+                  <tr ng-repeat="scan in scansPage.scanStore.items track by scan.id"
+                      ui-sref="seccubus.scansPage.edit({scan_id: scan.id})">
+                      <td data-title="Name">{{scan.name}}</td>
+                      <td data-title="Scanner">{{scan.scanner}}</td>
+                      <td data-title="Parameters">{{scan.parameters}}</td>
+                      <td data-title="Hosts">{{scan.targets}}</td>
+                      <td data-title="Last Scan">
+                        <span ng-if="scan.lastScan">{{scan.lastScan | date:'dd-MM-yyyy HH:mm'}}</span>
+                        <span ng-if="!scan.lastScan">-</span>
+                      </td>
+                      <td data-title="Notifications">{{scan.notifications}}</td>
+                  </tr>
 
-              <tr ng-if="scansPage.scanStore.isEmpty">
-                  <td colspan="6">No scans have been configured yet...</td>
-              </tr>
-          </tbody>
-      </table>
-  </md-whiteframe>
+                  <tr ng-if="scansPage.scanStore.isEmpty">
+                      <td colspan="6">No scans have been configured yet...</td>
+                  </tr>
+              </tbody>
+          </table>
+      </md-whiteframe>
+    </section>
+  </md-content>
 
   <md-button ui-sref="seccubus.scansPage.create" class="md-fab md-primary md-fab-bottom-right" aria-label="Create Workspace">
       <md-tooltip md-direction="left">
