--- a/frontend/src/components/status-page/status-page.html
+++ b/frontend/src/components/status-page/status-page.html
@@ -1,46 +1,36 @@
-<status-page layout-padding>
-	<md-card>
-		<md-toolbar class="md-accent">
-			<h2 class="md-toolbar-tools">
-				<span>Version Check</span>
-			</h2>
-		</md-toolbar>
+<status-page layout="column" layout-fill>
+  <md-content>
+    <section>
+      <md-subheader class="md-primary">Version Check</md-subheader>
 
-		<md-card-content ng-if="statusPage.statusStore.isLoading" layout="row" layout-sm="column" layout-align="space-around">
-			<md-progress-circular md-mode="indeterminate"></md-progress-circular>
-		</md-card-content>
+      <div ng-if="statusPage.statusStore.isLoading" layout="row" layout-align="center center">
+          <md-progress-circular md-mode="indeterminate"></md-progress-circular>
+      </div>
 
-		<md-card-content ng-if="!statusPage.statusStore.isLoading">
-			<md-list>
-				<md-list-item class="md-offset">
-					<md-icon ng-if="statusPage.statusStore.upToDate.status === 'OK'" class="success" md-svg-icon="navigation:check"></md-icon>
-					<md-icon ng-if="statusPage.statusStore.upToDate.status !== 'OK'" class="error" md-svg-icon="alert:error"></md-icon>
+      <md-list ng-if="!statusPage.statusStore.isLoading" layout-padding>
+        <md-list-item class="md-offset">
+          <md-icon ng-if="statusPage.statusStore.upToDate.status === 'OK'" class="success" md-svg-icon="navigation:check"></md-icon>
+          <md-icon ng-if="statusPage.statusStore.upToDate.status !== 'OK'" class="error" md-svg-icon="alert:error"></md-icon>
 
-					<p>{{statusPage.statusStore.upToDate.message}}</p>
-				</md-list-item>
-			</md-list>
-		</md-card-content>
-	</md-card>
+          <p>{{statusPage.statusStore.upToDate.message}}</p>
+        </md-list-item>
+      </md-list>
+    </section>
 
-	<md-card>
-		<md-toolbar class="md-accent">
-			<h2 class="md-toolbar-tools">
-				<span>Config Test</span>
-			</h2>
-		</md-toolbar>
+    <section>
+      <md-subheader class="md-primary">Config Test</md-subheader>
 
-		<md-card-content ng-if="statusPage.statusStore.isLoading" layout="row" layout-sm="column" layout-align="space-around">
-			<md-progress-circular md-mode="indeterminate"></md-progress-circular>
-		</md-card-content>
+      <div ng-if="statusPage.statusStore.isLoading" layout="row" layout-align="center center">
+          <md-progress-circular md-mode="indeterminate"></md-progress-circular>
+      </div>
 
-		<md-card-content ng-if="!statusPage.statusStore.isLoading">
-			<md-list>
-				<md-list-item ng-repeat="item in statusPage.statusStore.items">
-					<md-icon ng-if="item.result === 'OK'" class="success" md-svg-icon="navigation:check"></md-icon>
-					<md-icon ng-if="item.result === 'Error'" class="error" md-svg-icon="alert:error"></md-icon>
-					<p>{{item.message}}</p>
-				</md-list-item>
-			</md-list>
-		</md-card-content>
-	</md-card>
+      <md-list ng-if="!statusPage.statusStore.isLoading" layout-padding>
+        <md-list-item ng-repeat="item in statusPage.statusStore.items">
+          <md-icon ng-if="item.result === 'OK'" class="success" md-svg-icon="navigation:check"></md-icon>
+          <md-icon ng-if="item.result === 'Error'" class="error" md-svg-icon="alert:error"></md-icon>
+          <p>{{item.message}}</p>
+        </md-list-item>
+      </md-list>
+    </section>
+  </md-content>
 </status-page>
