--- a/jmvc/seccubus/scan/edit/views/init.ejs
+++ b/jmvc/seccubus/scan/edit/views/init.ejs
@@ -65,3 +65,7 @@
 <h2>Edit your notifications here</h2>
 <button class='createNotification' type='button' id="newNotification">New notification</button>
 <table id="editScanNotifications"></table>
+
+<h2>Edit your schedule here</h2>
+<button class='createSchedule' type='button' id="newSchedule">New schedule</button>
+<table id="editScanSchedule"></table>
