--- a/frontend/src/components/nav-bar/nav-bar.less
+++ b/frontend/src/components/nav-bar/nav-bar.less
@@ -23,4 +23,12 @@ nav-bar {
     line-height: 40px;
     font-weight: 300;
   }
+
+  md-select.md-default-theme {
+    margin: 0;
+    md-select-label {
+      padding: 4px 3px;
+      border-bottom: 0;
+    }
+  }
 }
