--- a/frontend/src/seccubus.less
+++ b/frontend/src/seccubus.less
@@ -6,6 +6,7 @@
 @import './components/runs-page/runs-page';
 @import './components/workspaces-page/workspaces-page';
 @import "./components/scans-page/scans-page";
+@import "./components/findings-page/findings-page";
 /* MARKER: insert component less files here */
 
 html {
@@ -62,6 +63,10 @@ body {
     height: 64px;
     // color: rgb(25, 118, 210) !important;
     color: rgba(0, 0, 0, 0.6) !important;
+  }
+
+  .filter-selects {
+    padding: 0 20px;
   }
 }
 
