--- a/jmvc/seccubus/schedule/table/views/schedule.ejs
+++ b/jmvc/seccubus/schedule/table/views/schedule.ejs
@@ -11,14 +11,15 @@
 <%# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. %>
 <%# See the License for the specific language governing permissions and      %>
 <%# limitations under the License.                                           %>
-<td><%= month %></td>
-<td><%= week %></td>
-<td><%= day %></td>
-<td><%= hour %></td>
-<td><%= min %></td>
-<td><%= status %></td>
-<td><%= lastRun %></td>
-<td>
+<td align='left'><%= monthT %></td>
+<td align='center'><%= weekT %></td>
+<td align='left'><%= wdayT %></td>
+<td align='center'><%= dayT %></td>
+<td align='center'><%= hourT %></td>
+<td align='center'><%= minT %></td>
+<td align='center'><%= status %></td>
+<td align='center'><%= lastRun %></td>
+<td align='center'>
 	<a href='javascript://' class="edit">Edit</a>
 	<a href='javascript://' class="destroy">Delete</a>
 </td>
