Added new schedule

--- a/jmvc/seccubus/scan/create/views/init.ejs
+++ b/jmvc/seccubus/scan/create/views/init.ejs
@@ -51,3 +51,7 @@
 		<div id='newScanHelp'></div>
 	</td></tr>
 </table>
+
+<h2>Edit your schedule here</h2>
+<button class='createSchedule' type='button' id="newSchedule">New schedule</button>
+<table id="editScanSchedule"></table>
