--- a/jmvc/seccubus/issue/table/views/init.ejs
+++ b/jmvc/seccubus/issue/table/views/init.ejs
@@ -11,21 +11,22 @@
 <%# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. %>
 <%# See the License for the specific language governing permissions and      %>
 <%# limitations under the License.                                           %>
-<tr>
-	<td>Name</td>
-	<td>Description</td>
-	<td>External reference</td>
-	<td>Severity</td>
-	<td># of findings</td>
-	<td>Status</td>
-</tr>
-<% if ( this.length == 0 ) { %>
-	<%== $.View('//seccubus/issue/table/views/error.ejs') %>
-<% } else { %>
-	<option selected value=-1 disabled=true>Select a issue below</option>
-	<% for(var i = 0; i < this.length ; i++) { %>
-		<option <%= this[i] %> value='<%= this[i].id %>'>
+<input type="checkbox" class="openclose" name="status" value="Open" checked>Open
+<input type="checkbox" class="openclose" name="status" value="Closed">Closed
+<table>
+	<tr>
+		<td>Name</td>
+		<td>Description</td>
+		<td>External reference</td>
+		<td>Severity</td>
+		<td># of findings</td>
+		<td>Status</td>
+	</tr>
+	<% if ( this.length == 0 ) { %>
+		<%== $.View('//seccubus/issue/table/views/error.ejs') %>
+	<% } else { %>
+		<% for(var i = 0; i < this.length ; i++) { %>
 			<%== $.View('//seccubus/issue/table/views/issue.ejs', this[i] )%>
-		</option>
+		<% } %>
 	<% } %>
-<% } %>
+</table>
