--- a/jmvc/seccubus/issuelink/table/views/init.ejs
+++ b/jmvc/seccubus/issuelink/table/views/init.ejs
@@ -31,7 +31,7 @@
 			<td>Finding</td>
 			<td>Remark</td>
 			<td>Status</td>
-			<td>Action</td>
+			<td>Actions</td>
 		</tr>
 	</thead>
 	<tbody>
