Added the ability to link a finding to an issue from the table

--- a/jmvc/seccubus/finding/table/views/finding.ejs
+++ b/jmvc/seccubus/finding/table/views/finding.ejs
@@ -17,9 +17,8 @@
 		<% if(columns[i+1] == "Action") { %>
 			<td>
 			    <% if ( ! noEdit ) { %> 
-					<a href='javascript://' class='editFinding'>
-						<img src='img/edit.png'>
-					</a><br>
+					<img class='editFinding' src='img/edit.png'><br>
+					<img class='linkFinding' src='img/link.png'><br>
 				<% } %>
 				<% if (status == 99 ) { %>
 					<a href='javascript://' value='1' class='small changeState'><img src='img/new.png'></a><br>
